Update mstile icon, add fallback font for Montserrat, add project README.md

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -29,7 +29,7 @@ $mono-padding: 0.2em 0.4em;
 
 $title-font-size: 0.9 * $font-size;
 
-$header-font-family: Montserrat;
+$header-font-family: Montserrat, "DejaVu Sans", Verdana, sans‑serif;
 $header-font-weight: 700;
 $header-font-size: 1 * $font-size;
 $header-padding-h: 0.5em;
