Minimise HTML and CSS when building; Replace text+icon social links with icon only

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,8 +7,8 @@
                 are apparently not supported in HTML, only in Markdown -->
             <!-- <li><a href="/" class="title">{% highlight c %}static int lucas;{% endhighlight %}</a> -->
             <li><a href="/" class="title"><span class="highlight"><code class="language-c" data-lang="c"><span class="k">static</span> <span class="kt">int</span> <span class="n">lucas</span><span class="p">;</span></code></span></a>
-            <li><a href="https://twitter.com/staticintlucas"><i class="fab fa-twitter"></i> Twitter</a>
-            <li><a href="https://github.com/staticintlucas"><i class="fab fa-github"></i> Github</a>
+            <li><a href="https://twitter.com/staticintlucas"><i class="fab fa-twitter"></i></a>
+            <li><a href="https://github.com/staticintlucas"><i class="fab fa-github"></i></a>
         </ul>
     </nav>
 </header>
