Add license files and copyright information

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,6 @@ layout: compress-html
         <article>
             {{ content }}
         </article>
+        {% include footer.html %}
     </body>
 </html>
