--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -36,6 +36,8 @@ $header-padding-h: 0.5em;
 $header-padding-v: 0.3em;
 $header-spacing: 4 * $font-size;
 
+$footer-font-size: 0.8 * $font-size;
+
 $underline-thickness: 1pt;
 $bullet-font-size: 0.8em;
 
