Adjust css to use flexbox in the body; change link style to use a more tradidional-looking faux underline

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@ layout: compress-html
 <html lang="en">
     <head>
         {% include head.html %}
+        <link rel="stylesheet" href="/assets/css/style.css">
     </head>
     <body>
         {% include nav.html %}
