--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,10 +1,13 @@
+@import "trig";
+
 $background: #1e1e1e;
 $lighter: #252526;
 $foreground: #c8c8c8;
 $greyed-out: #858585;
-$active-bg: hsl(193, 30%, 52%);
-$active-fg: black;
+$active-fg: white;
 $highlight: hsl(193, 30%, 52%);
+$selection-bg: rgba(hsl(193, 30%, 52%), 0.996);
+$selection-fg: black;
 
 $font-family: "Crimson Pro", Georgia, Cambria, "Times New Roman", Times, serif;
 $font-weight: 300;
@@ -34,7 +37,6 @@ $header-font-weight: 700;
 $header-font-size: 1 * $font-size;
 $header-padding-h: 0.5em;
 $header-padding-v: 0.3em;
-$header-spacing: 4 * $font-size;
 
 $footer-font-size: 0.8 * $font-size;
 
@@ -44,15 +46,32 @@ $bullet-font-size: 0.8em;
 $highlight-line: 3pt;
 $grey-thickness: 2.25pt;
 
-$a-padding-h: 0.2em;
-$a-padding-v: 0.15em;
-// $a-padding-v: ($font-line-height - $font-content-area) / 2 * 1em;
-// $a-highlight-height: (($font-line-height - $font-content-area) / 2 + $font-descender) / $font-line-height * 100%;
-$a-highlight-height: $highlight-line / ($font-line-height * $font-size) * 100%;
-$a-hover-height: 94%;
+@function shadow($width, $color) {
+    $output: '';
+    $t: 0deg;
+    @while $t < 360deg {
+        $x: $width * cos($t);
+        $y: $width * sin($t);
+        $output: $output + '#{$x} #{$y} 0 #{$color}, ';
+        $t: $t + 15deg;
+    }
+    $output: str-slice($output, 1, -3);
+    @return unquote($output);
+}
 
-$v-spacing: 1.2 * $font-size;
-$h-spacing: 1.4 * $font-size;
+$a-uline-offset: 5%;
+$a-uline-thickness: 0.06em;
+$a-background-image: linear-gradient(to top,
+    transparent 0,
+    currentColor 0,
+    currentColor 100%,
+    transparent 100%);
+$a-text-shadow: shadow(0.07em, $background);
+
+$body-spacing: 1.2 * $font-size;
+$v-spacing: 4 * $font-size;
+$h-spacing: 1.8 * $font-size;
+$inline-v-spacing: 1.2 * $font-size;
 $list-h-spacing: 2 * $font-size;
 $li-h-spacing: 0.3 * $font-size;
 $paragraph-spacing: 1 * $font-size;
@@ -63,6 +82,7 @@ $code-v-spacing: 0.5 * $font-size;
 $quote-h-spacing: 0.4 * $font-size;
 $quote-v-spacing: 0.8 * $font-size;
 
-$max-body-width: 30 * $font-size;
-$max-width-break: $max-body-width + (2 * $h-spacing);
+$max-body-width: 65 * $font-size;
+$max-content-width: 25 * $font-size;
+
 $header-fmt-break: 25 * $font-size;
