--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,7 +1,8 @@
 @import "trig";
 
-$background: #1e1e1e;
-$lighter: #252526;
+$background: #1f1f1f;
+$lighter: #262627;
+$lighterer: #323234;
 $foreground: #c8c8c8;
 $greyed-out: #858585;
 $active-fg: white;
@@ -11,10 +12,11 @@ $selection-fg: black;
 
 $font-family: "Crimson Pro", Georgia, Cambria, "Times New Roman", Times, serif;
 $font-weight: 300;
+$bold-font-weight: 500;
 $font-letter-spacing: 0.003em;
 $font-ascender: 918 / 1024; // from https://seek-oss.github.io/capsize/
 $font-descender: 220 / 1024;
-$font-caps-height: 587 / 1024;
+// $font-caps-height: 587 / 1024;
 $font-content-area: $font-ascender + $font-descender;
 $font-size: 18pt;
 $font-line-height-mulp: 25.5pt / $font-size / $font-content-area;
@@ -31,7 +33,7 @@ $mono-font-family: "Fira Mono", monospace;
 $mono-letter-spacing: 0;
 $mono-font-ascender: 935 / 1000; // from https://seek-oss.github.io/capsize/
 $mono-font-descender: 265 / 1000;
-$mono-font-caps-height: 689 / 1000;
+// $mono-font-caps-height: 689 / 1000;
 $mono-font-content-area: $mono-font-ascender + $mono-font-descender;
 $mono-font-size: 2/3 * $font-size;
 $mono-line-height: 1.2 * $mono-font-content-area;
@@ -41,12 +43,10 @@ $title-font-size: 0.9 * $font-size;
 
 $header-font-family: Montserrat, "DejaVu Sans", Verdana, sans‑serif;
 $header-font-weight: 700;
-$header-font-ascender: 968 / 1000; // from https://seek-oss.github.io/capsize/
-$header-font-descender: 251 / 1000;
-$header-font-caps-height: 700 / 1000;
+// $header-font-ascender: 968 / 1000; // from https://seek-oss.github.io/capsize/
+// $header-font-descender: 251 / 1000;
+// $header-font-caps-height: 700 / 1000;
 $header-font-size: 1 * $font-size;
-$header-padding-h: 0.5em;
-$header-padding-v: 0.3em;
 
 $footer-font-size: 0.8 * $font-size;
 
@@ -55,6 +55,7 @@ $bullet-font-size: 0.8em;
 
 $highlight-line: 3pt;
 $grey-thickness: 0.12em;
+$table-line-thickness: 1.5pt;
 
 @function shadow($width, $color) {
     $output: '';
@@ -78,10 +79,10 @@ $a-background-image: linear-gradient(to top,
     transparent 100%);
 $a-text-shadow: shadow(0.06em, $background);
 
-$body-spacing: 1.2 * $font-size;
-$v-spacing: 4 * $font-size;
-$h-spacing: 1.8 * $font-size;
-$inline-v-spacing: 1.2 * $font-size;
+
+$content-spacing: 4 * $font-size;
+$nav-h-spacing: 1.8 * $font-size;
+$nav-v-spacing: 1 * $font-size;
 $list-h-spacing: 2 * $font-size;
 $li-h-spacing: 0.3 * $font-size;
 $paragraph-spacing: 1 * $font-size;
@@ -92,9 +93,8 @@ $code-v-spacing: 0.5 * $font-size;
 $quote-h-spacing: 0.4 * $font-size;
 $quote-v-spacing: 0.8 * $font-size;
 
-$sidebar-width: 15 * $font-size;
-$sidebar-spacing: 3 * $font-size;
 $max-content-width: 25 * $font-size;
+$max-overall-width: 55 * $font-size;
 
 @mixin mobile {
     @media (max-width: 25 * $font-size) {
@@ -103,7 +103,7 @@ $max-content-width: 25 * $font-size;
 }
 
 @mixin large {
-    @media (min-width: $max-content-width + 2 * ($body-spacing + $sidebar-spacing) + $sidebar-width) {
+    @media (min-width: $max-overall-width) {
         @content;
     }
 }
