--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>{{ page.title }}</title>
+<title>{% if page.alt_title %}{{ page.alt_title }}{% else %}{{ page.title }}{% endif %}</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
 <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,300;0,500;1,300;1,500&amp;family=Fira+Mono&amp;family=Montserrat:ital,wght@0,700;1,700&amp;display=swap" rel="stylesheet">
 
-<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
