--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
         {% include nav.html %}
         <main>
             <article>
+                {{ "# " | append: page.title | markdownify }}
                 {{ content }}
             </article>
             {% include footer.html %}
