Change hover underline behaviour of the nav links

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -93,6 +93,10 @@ header>nav {
             &:last-child {
                 margin-right: 0;
             }
+
+            a:not(:hover):not(:focus) u {
+                background: transparent;
+            }
         }
 
         a.title {
