--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,7 +5,7 @@
             Note: omitting the closing li on purpose. HTML5 auto-closes them and leaves no
                 whitespace in between.
             {% endcomment %}
-            <li><a href="/" class="title noline">Lucas Jansen</a>
+            <li><a href="/" class="title noline"><u>Lucas Jansen</u></a>
             <li><a href="/projects" class="noline">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-code" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
