--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 ---
-layout: compress-css
+# empty front matter so Jekyll knows to process this file
 ---
+
 @import "reset";
 @import "main";
 @import "code";
